envoyfilter-teaching/envoyfilter/simple/postgres-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:9.5
          ports:
            - containerPort: 5432
              name: postgredb
#          volumeMounts:
#            - name: postgres-data
#              mountPath: /var/lib/postgresql/data
#              subPath: postgres
#  volumeClaimTemplates:
#    - metadata:
#        name: postgres-data
#      spec:
#        accessModes: ["ReadWriteOnce"]
#        resources:
#          requests:
#            storage: 2Gi
        
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
      name: postgres
  selector:
    app: postgres
