envoyfilter-teaching/envoyfilter/simple/ef-mongo_proxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 31400 
        filterChain:
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.network.mongo_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy
          stat_prefix: mongodb
          emit_dynamic_metadata: true
          delay:
            fixed_delay: 1s
            percentage:
              numerator: 20
              denominator: 	HUNDRED
          commands:
          - delete
          - insert
          - update
          access_log: /dev/stdout
